유닛테스트 관련 클래스 추가

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>taeeun.hello.spring4</groupId>
+    <groupId>nimxxs.hello.spring4</groupId>
     <artifactId>Spring4MVC</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>Spring4MVC</name>
@@ -18,7 +18,7 @@
 
         <slf4j.version>1.7.36</slf4j.version>
         <log4j.version>2.12.4</log4j.version>
-        <junit.version>5.9.2</junit.version>
+        <junit.version>4.13.2</junit.version>
     </properties>
 
     <dependencies>
@@ -38,7 +38,11 @@
             <artifactId>spring-jdbc</artifactId>
             <version>${org.springframework-version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>${org.springframework-version}</version>
+        </dependency>
 
         <!-- web, jstl -->
         <dependency>
@@ -127,19 +131,14 @@
             <version>2.7.9</version>
         </dependency>
 
+        <!-- junit4 -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
 
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-api</artifactId>
-            <version>${junit.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-engine</artifactId>
-            <version>${junit.version}</version>
-            <scope>test</scope>
-        </dependency>
     </dependencies>
 
     <build>
