--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>nimxxs.hello.spring4</groupId>
+    <groupId>taeeun.hello.spring4</groupId>
     <artifactId>Spring4MVC</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>Spring4MVC</name>
@@ -18,6 +18,7 @@
 
         <slf4j.version>1.7.36</slf4j.version>
         <log4j.version>2.12.4</log4j.version>
+        <aspectj.version>1.9.19</aspectj.version>
         <junit.version>4.13.2</junit.version>
     </properties>
 
@@ -30,12 +31,12 @@
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
-            <artifactId>spring-webmvc</artifactId>
+            <artifactId>spring-jdbc</artifactId>
             <version>${org.springframework-version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
-            <artifactId>spring-jdbc</artifactId>
+            <artifactId>spring-webmvc</artifactId>
             <version>${org.springframework-version}</version>
         </dependency>
         <dependency>
@@ -43,6 +44,7 @@
             <artifactId>spring-test</artifactId>
             <version>${org.springframework-version}</version>
         </dependency>
+
 
         <!-- web, jstl -->
         <dependency>
@@ -105,19 +107,14 @@
             <scope>provided</scope>
         </dependency>
 
-        <!--tiles -->
+        <!-- tiles -->
         <dependency>
             <groupId>org.apache.tiles</groupId>
             <artifactId>tiles-servlet</artifactId>
             <version>3.0.8</version>
         </dependency>
-        <dependency>
-            <groupId>org.apache.tiles</groupId>
-            <artifactId>tiles-jsp</artifactId>
-            <version>3.0.8</version>
-        </dependency>
 
-        <!-- connection pool -->
+        <!-- connection pool-->
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-dbcp2</artifactId>
@@ -129,6 +126,26 @@
             <groupId>org.mariadb.jdbc</groupId>
             <artifactId>mariadb-java-client</artifactId>
             <version>2.7.9</version>
+        </dependency>
+
+        <!-- aspectj -->
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>${aspectj.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjrt</artifactId>
+            <version>${aspectj.version}</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>org.apache.tiles</groupId>
+            <artifactId>tiles-jsp</artifactId>
+            <version>3.0.8</version>
         </dependency>
 
         <!-- junit4 -->
